# Forge

./: .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  meson.build
.cache/clangd/index/: forge.hpp.82A6B73A3DBB2F4F.idx  main.cpp.FB46AE0FDD42EE38.idx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  feature_request.md
example/: build.cpp  build.wasm
example/src/: main.cpp
include/: forge.hpp  forge_native.hpp  forge_wasm.hpp
src/: forge.h  loader.cpp  main.cpp  manifest.hpp
src/cache/: hasher.hpp  manifest.hpp
src/cli/: interface.cpp  interface.h++  log.h++  message.h++
src/core/: core.cpp  core.h++  paths.cpp  paths.h++
src/sandbox/: loader.cpp  loader.h++
src/scheduler/: executor.hpp
